# raytracer

./: .gitignore  CMakeLists.txt  README.md
docs/: building.md  scenes.md
models/: .gitignore
renders/: .gitignore
scenes/: .gitignore  scene0.txt  scene6.txt  scene8.txt
src/: constants.hpp  getColorForRay.cpp  getColorForRay.hpp  loadScene.cpp  loadScene.hpp  main.cpp  utils.hpp
src/entities/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  ObjModel.cpp  Plane.cpp  Plane.hpp  Triangle.cpp
src/entities/objects/: ObjModel.cpp  ObjModel.hpp  Object3D.cpp  Object3D.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/objects/: ObjModel.cpp  ObjModel.hpp  Object3D.cpp  Object3D.hpp  Sphere.cpp  Triangle.cpp  Triangle.hpp
